# pj-cv

./: .gitmodules  README.md
cpp/capture/: .clang-format  CMakeLists.txt
cpp/capture/include/: algorithm_factory.hpp  jpeg_writter.hpp  jpeg_writter_ex.hpp  jpeg_writter_sql.hpp  monitor_queue.hpp  opencv_frame.hpp
cpp/capture/include/algo/: hog_dlib.hpp  hough_circles.hpp  od_interface.hpp
cpp/capture/include/pipe/: filter.hpp  pipeline.hpp  producer.hpp
cpp/capture/src/: algorithm_factory.cpp  main.cpp  mysqlstore.cpp  pipeline.cpp
cpp/capture/svmdata/: object_detector.svm  p1_dset.svm  pd1.svm  tr2_80x80.svm  tr3_80x80.svm  tr4_120x120.svm
cpp/pizzajones/: CMakeLists.txt
cpp/pizzajones/src/: PizzaJones.cpp
cpp/train-dnn/: CMakeLists.txt
cpp/train-dnn/data/: good_pizzas.csv  pizzas.csv  testing.csv  testing2.csv  train-dnn.exe.7z
cpp/train-dnn/include/: csv.h
cpp/train-dnn/src/: main.cpp
experemental/AAMEstimator/: PizzaJones.sln
experemental/AAMEstimator/PizzaJones/: PizzaJones.cpp  PizzaJones.vcxproj  PizzaJones.vcxproj.filters  ReadMe.txt  stdafx.cpp
experemental/AAMEstimator/PizzaJones/Debug/: PizzaJones.pch  vc140.idb
experemental/AAMEstimator/PizzaJones/Debug/PizzaJones.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PizzaJones.lastbuildstate
experemental/AAMEstimator/PizzaJones/x64/Debug/: PizzaJones.pch  pizzajones.obj.enc  vc140.idb
experemental/AAMEstimator/PizzaJones/x64/Debug/PizzaJones.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PizzaJones.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
experemental/AAMEstimator/ipch/PIZZAJONES-62256356/: PIZZAJONES-d56aacd7.ipch  PIZZAJONES-e3123b9.ipch
experemental/AAMEstimator/x64/Debug/: PizzaJones.ilk  pizza-small-template-1.psd
experemental/tiny-cnn/Project1/: Project1.vcxproj  Project1.vcxproj.filters
experemental/tiny-cnn/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
experemental/tiny-cnn/Project1/x64/Release/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
experemental/tiny_dnn/: config.h
python/: capture.py  loadimages.py  opencvimg.py
